--- a/index.html
+++ b/index.html
@@ -89,98 +89,130 @@
     <div class="homepage-info" id="homepage-info-page">
         <section>
           <div>
-              <h3>Biologisk mångfald i hagen</h3>
-              <p>
-                  Åkerbackarna och hällarna i betesmarken är mycket artrika. Floran har utvecklats och
-                  formats genom flera hundra år av öppethållande genom bete och slåtter. Den
-                  långvariga hävden har magrat ur marken och skapat förutsättningar för
-                  konkurrenssvaga blommande örter och gräs. Karaktärsarter på backarna är
-                  tjärblomster, backklöver, backsmultron, harklöver, brudbröd, axveronika, olika arter av
-                  fetknoppar, backnejlika, ängsskallra och solvända. Bland dessa är axveronika,
-                  backklöver och solvända samt flentimotej, vippärt, gullklöver och vårstarr rödlistade.
-                  Att en art är rödlistad innebär att den bedöms riskera att dö ut från Sverige.
-                  Hur många av dessa kan du hitta i sommar?
-              </p>
-          </div>
-          <div class="homepage-info-images">
-              <img src="src/images/blomma2.png" loading="lazy"/>
-              <img src="src/images/blomma1.png" loading="lazy"/>
-              <img src="src/images/blomma1.jpg" loading="lazy"/>
-          </div>
-          <div>
-              <h3>Vaxskivlingar är ofta praktfulla</h3>
-              <p>
-                  Den magra jorden och den långa beteshävden har givit upphov till en rik
-                  ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
-                  ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
-                  bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
-                  och gråbrun ängsfingersvamp, är dessutom rödlistade.
-                  Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
-                  Du hittar dem främst under september till oktober.
-              </p>
-          </div>
-          <div>
-              <h3>Insekter på ängen</h3>
-              <div class="homepage-info-images-text">
-                  <p>
-                      En stor mängd blommor drar förstås också till sig många fjärilar och andra
-                      pollinerande insekter. På Malma ängar har hittills fem rödlistade fjärilsarter
-                      observerats; humlerotfjäril, violettkantad guldvinge samt sexfläckig, bredbrämad och
-                      mindre bastardsvärmare! Utöver dessa mer sällsynta invånare bor även ett stort antal
-                      andra dagfjärilar, nattflyn, vildbin, vivlar, skinnbaggar och skalbaggar i de varma,
-                      blomrika miljöerna. Inte mindre än 170 arter av ryggradslösa djur finns rapporterade
-                      från området i Artportalen och många fler lär det finnas för den som letar.
-                      Ut och håva, det är vår uppmaning!
-                  </p>
-                  <img src="src/images/bi1.png" loading="lazy"/>
-              </div>
-          </div>
-          <img src="src/images/graphics/wave.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;">
+            <h3>Hjälp till rädda Malma by och ängar</h3>
+            <p>
+                Viktigaste grunden för att vi ska bevara ängarna är kunskap om
+                den biologiska mångfald som finns här. Utan kunskap vet vi inte
+                vad som är värt att bevara och hur man ska göra det. Ett bra sätt
+                att lära sig är att vara nyfiken när man är ute i naturen eller att
+                vara med i någon förening.
+                I Facebook-gruppen ”Rädda Malma by och ängar” kan du läsa
+                om kampen. Där finns även epost till personer som du kan
+                kontakta och länkar till beslutsdokument mm.
+            </p>
+            <div class="homepage-info-images">
+                <img src="src/images/malmagård.jpg" loading="lazy"/>
+                <img src="src/images/malmaängar1.jpg" loading="lazy"/>
+                <img src="src/images/malmaängar2.jpg" loading="lazy"/>
+            </div>
+        </div>
+        <div>
+            <h3>Ägare till Malma by och ängar</h3>
+            <p>
+              Ägare till de aktuella markerna på och vid Malma gård och ängar är genom en flerhundraårig donation Gustavianska stiftelsen. 
+              Beslut om stiftelsens ägor fattas av Uppsala universitet genom dess Konsistorium. 
+              Markerna förvaltas av Uppsala Akademiförvaltning. Så här skriver akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
+            </p>
+            <p style="border: 2px solid black; border-radius: 5px; padding: 10px;">
+                ”Vi förvaltar drömmar om en bättre värld
+                Genom långsiktig och hållbar förvaltning säkerställer vi att våra
+                donatorers vilja fortlever utan att göra avkall på planetens och
+                framtida generationers behov, både ekonomiskt, miljömässigt
+                och socialt.”
+            </p>
+            <p>
+                Kontakta Akdemiförvaltningen och påpeka på att de ska
+                säkerställa en långsiktig hållbar förvaltning som de själva säger
+                att de vill uppnå.
+            </p>
+            <p>
+                <b>VD Kent Berg</b><br>
+                018 - 471 75 40 070-632 93 94 <br>
+                kent.berg@uaf.uu.se
+            </p>
+        </div>
+        <div>
+          <h3>Påverka beslut</h3>
+          <p>
+              Beslut om vad man ska göra med Malma by och ängar beslutas av
+              kommunen och av markägarna.
+              Följ planprocessen.
+              Byggaktören Besqab har begärt planbesked av Plan- och byggnadsnämnden
+              för att pröva möjligheten att kunna uppföra bostäder.
+              På
+              <a href="https://www.uppsala.se/bygga-och-bo/samhallsbyggnad-och-planering/detaljplaner-program-och-omradesbestammelser/hitta-detaljplaner-och-omradesbestammelser/2020/valsatra-19-och-14-sodra-delen/"><u>Uppsala kommuns hemsida kan du följa ärendet</u></a>
+          </p>
+          <p>
+              <b>Kontakta politiker</b><br>
+              Kommunens kommunalråd har avgörande betydelse för inriktningen av planeringen.<br><br>
+              <b>Erik Pelling (S):</b> erik.pelling@uppsala.se<br>
+              <b>Rickard Malmström (MP):</b>  rickard.malmstrom@pol.uppsala.se<br><br>
+              <b>Plan- och byggnadsnämnden fattar beslut om bebyggelse</b><br><br>
+              <b>Ylva Stadell (S):</b> ylva.stadell@pol.uppsala.se ordförande<br>
+              <b>Erik Dagnesjö (S):</b> erik.dagnesjo@pol.uppsala.se ledamot<br>
+              <b>Kia Solid (S):</b> kristina.solid@pol.uppsala.se ledamot<br>
+              <b>Sebastian Sirén (S):</b> sebastian.siren@pol.uppsala.se ledamot<br>
+              <b>Therez Almerfors (M):</b> therez.almerfors@pol.uppsala.se 2:e vice ordförande<br>
+              <b>Lars Tufvesson (M):</b> lars.tufvesson@pol.uppsala.se ledamot<br>
+              <b>Magne Björklund (V):</b> magne.bjorklund@pol.uppsala.se ledamot<br>
+              <b>Ingela Ekrelius (V):</b> ingela.ekrelius@pol.uppsala.se ledamot<br>
+              <b>Anders A Aronsson (L):</b> anders.aronsson@pol.uppsala.se 1:e vice ordförande<br>
+              <b>Lars Friberg (MP):</b> lars.friberg@pol.uppsala.se ledamot<br>
+              <b>Victor Zhao-Jansson (C):</b> victor.zhao-jansson@pol.uppsala.se ledamot<br>
+              <b>Magnus Wikberg (KD):</b> magnus.wikberg@pol.uppsala.se ledamot<br>
+              <b>Peter Bytar (SD):</b> peter.bytar@pol.uppsala.se ledamot<br>
+          </p>
+        </div>
+        <img src="src/images/graphics/wave.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;">
         </section>
         <section style="background-color: thistle;">
-          <div>
-              <h3>Hjälp till rädda Malma by och ängar</h3>
-              <p>
-                  Viktigaste grunden för att vi ska bevara ängarna är kunskap om
-                  den biologiska mångfald som finns här. Utan kunskap vet vi inte
-                  vad som är värt att bevara och hur man ska göra det. Ett bra sätt
-                  att lära sig är att vara nyfiken när man är ute i naturen eller att
-                  vara med i någon förening.
-                  I Facebook-gruppen ”Rädda Malma by och ängar” kan du läsa
-                  om kampen. Där finns även epost till personer som du kan
-                  kontakta och länkar till beslutsdokument mm.
-              </p>
-              <div class="homepage-info-images">
-                  <img src="src/images/malmagård.jpg" loading="lazy"/>
-                  <img src="src/images/malmaängar1.jpg" loading="lazy"/>
-                  <img src="src/images/malmaängar2.jpg" loading="lazy"/>
-              </div>
-          </div>
-          <div>
-              <h3>Ägare till Malma by och ängar</h3>
-              <p>
-                Ägare till de aktuella markerna på och vid Malma gård och ängar är genom en flerhundraårig donation Gustavianska stiftelsen. 
-                Beslut om stiftelsens ägor fattas av Uppsala universitet genom dess Konsistorium. 
-                Markerna förvaltas av Uppsala Akademiförvaltning. Så här skriver akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
-              </p>
-              <p style="border: 2px solid black; border-radius: 5px; padding: 10px;">
-                  ”Vi förvaltar drömmar om en bättre värld
-                  Genom långsiktig och hållbar förvaltning säkerställer vi att våra
-                  donatorers vilja fortlever utan att göra avkall på planetens och
-                  framtida generationers behov, både ekonomiskt, miljömässigt
-                  och socialt.”
-              </p>
-              <p>
-                  Kontakta Akdemiförvaltningen och påpeka på att de ska
-                  säkerställa en långsiktig hållbar förvaltning som de själva säger
-                  att de vill uppnå.
-              </p>
-              <p>
-                  <b>VD Kent Berg</b><br>
-                  018 - 471 75 40 070-632 93 94 <br>
-                  kent.berg@uaf.uu.se
-              </p>
-          </div>
+            <div>
+                <h3>Biologisk mångfald i hagen</h3>
+                <p>
+                    Åkerbackarna och hällarna i betesmarken är mycket artrika. Floran har utvecklats och
+                    formats genom flera hundra år av öppethållande genom bete och slåtter. Den
+                    långvariga hävden har magrat ur marken och skapat förutsättningar för
+                    konkurrenssvaga blommande örter och gräs. Karaktärsarter på backarna är
+                    tjärblomster, backklöver, backsmultron, harklöver, brudbröd, axveronika, olika arter av
+                    fetknoppar, backnejlika, ängsskallra och solvända. Bland dessa är axveronika,
+                    backklöver och solvända samt flentimotej, vippärt, gullklöver och vårstarr rödlistade.
+                    Att en art är rödlistad innebär att den bedöms riskera att dö ut från Sverige.
+                    Hur många av dessa kan du hitta i sommar?
+                </p>
+            </div>
+            <div class="homepage-info-images">
+                <img src="src/images/blomma2.png" loading="lazy"/>
+                <img src="src/images/blomma1.png" loading="lazy"/>
+                <img src="src/images/blomma1.jpg" loading="lazy"/>
+            </div>
+            <div>
+                <h3>Vaxskivlingar är ofta praktfulla</h3>
+                <p>
+                    Den magra jorden och den långa beteshävden har givit upphov till en rik
+                    ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
+                    ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
+                    bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
+                    och gråbrun ängsfingersvamp, är dessutom rödlistade.
+                    Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
+                    Du hittar dem främst under september till oktober.
+                </p>
+            </div>
+            <div>
+                <h3>Insekter på ängen</h3>
+                <div class="homepage-info-images-text">
+                    <p>
+                        En stor mängd blommor drar förstås också till sig många fjärilar och andra
+                        pollinerande insekter. På Malma ängar har hittills fem rödlistade fjärilsarter
+                        observerats; humlerotfjäril, violettkantad guldvinge samt sexfläckig, bredbrämad och
+                        mindre bastardsvärmare! Utöver dessa mer sällsynta invånare bor även ett stort antal
+                        andra dagfjärilar, nattflyn, vildbin, vivlar, skinnbaggar och skalbaggar i de varma,
+                        blomrika miljöerna. Inte mindre än 170 arter av ryggradslösa djur finns rapporterade
+                        från området i Artportalen och många fler lär det finnas för den som letar.
+                        Ut och håva, det är vår uppmaning!
+                    </p>
+                    <img src="src/images/bi1.png" loading="lazy"/>
+                </div>
+            </div>
           <img src="src/images/graphics/wave1.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;"/>
         </section>
         <section style="background-color: #9EBC9E;">
@@ -217,8 +249,6 @@
               </div>
           </div>
         </section>
-        <!-- Saknar Påverka beslut-->
-
     </div>
 
 </body>
