--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -62,24 +62,23 @@
   
   <h1 style="width:50%; margin:auto; padding: 50px 0 50px 0; margin-bottom: 0;">Kalendarium</h1>
     <section style="border-radius: 10px; width:50%; margin:auto; border: 3px solid black; padding: 25px;">
-        <h2>Tidsplan</h2>
         <!-- <h3>Lördag 13 maj</h3>
-        <p>Malmadagen Aktivitet och trivsel ute på ängarna</p> -->
+        <p>Malmadagen Aktivitet och trivsel ute på ängarna</p> 
         <h3>Onsdag 31 maj</h3> 
         <p>Styrelsesammanträde</p>
         <h3>Onsdag 7 juni</h3>
-        <p>Förväntat datum för kommunens detaljplan över området</p>
+        <p>Förväntat datum för kommunens detaljplan över området</p>-->
         <h3>Tisdag 13 juni</h3>
         <p>Exkursion med Cajsa Björkén</p>
         <h3>Tisdag 13 juni</h3>
         <p>Styrelsesammanträde</p>
-        <h3>Onsdag 14 juni</h3>
+        <!--<h3>Onsdag 14 juni</h3>
         <p>
             Föreningsmöte på Valsätraskolan
             Information och åtgärder med anledning av detaljplanen
         </p>
         <h3>Onsdag 19 juli</h3>
-        <p>Preliminärt sista datum för synpunkter på detaljplanen</p>
+        <p>Preliminärt sista datum för synpunkter på detaljplanen</p>-->
     </section>
   
 </body>
