--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
               <b>Peter Bytar (SD):</b> peter.bytar@pol.uppsala.se ledamot<br>
           </p>
         </div>
-        <img src="src/images/graphics/wave.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;">
         </section>
-        <section style="background-color: thistle;">
+        <section>
             <div>
                 <h3>Biologisk mångfald i hagen</h3>
                 <p>
@@ -213,9 +212,8 @@
                     <img src="src/images/bi1.png" loading="lazy"/>
                 </div>
             </div>
-          <img src="src/images/graphics/wave1.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;"/>
         </section>
-        <section style="background-color: #9EBC9E;">
+        <section>
           <div>
               <h3>Malma ängar och betesmarker</h3>
               <p>
