--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -68,6 +68,8 @@
   <div class="aktuellt-info">
     <h1>Aktuellt</h1>
     <article>
+      <h2>Ingenting inplanerat just nu, återkom gärna vid en senare tidpunk!</h2>
+      <!--
       <h2 style="margin-bottom: 0;">Föreningen Malma by och ängar bjuder in: Träffa våra naturkunniga experter</h2>
       <span>Tisdag 13 juni kl. 18.00</span>
       <img src="../src/images/aktuellt/aktuellt.png" style="border-radius: 10px; margin: 25px 0; width: 100%;">
@@ -84,7 +86,7 @@
       <p>
         <b>Björn Bråvander</b><br>
         Björn är en artjägare som är intresserad av det mesta i naturen. Kanske särskilt rödlistade- och signal-arter. Specialområdet är svampar. Björn driver eget företag, i vilket han inventerar svampförekomst i potentiellt skyddsvärd skog och håller svampkurser. Han vill inte presentera sig själv som någon insektsexpert, men som boende i Ulleråker börjar han bli väl bekant med förekomster av den starkt hotade cinnoberbaggen i vår närmiljö här i Uppsalas södra stadsdelar.
-      </p>
+      </p>-->
     </article>
   </div>
 </body>
