--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -67,18 +67,19 @@
         <h3>Onsdag 31 maj</h3> 
         <p>Styrelsesammanträde</p>
         <h3>Onsdag 7 juni</h3>
-        <p>Förväntat datum för kommunens detaljplan över området</p>-->
+        <p>Förväntat datum för kommunens detaljplan över området</p>
         <h3>Tisdag 13 juni</h3>
         <p>Exkursion med Cajsa Björkén</p>
         <h3>Tisdag 13 juni</h3>
         <p>Styrelsesammanträde</p>
-        <!--<h3>Onsdag 14 juni</h3>
+        <h3>Onsdag 14 juni</h3>
         <p>
             Föreningsmöte på Valsätraskolan
             Information och åtgärder med anledning av detaljplanen
         </p>
         <h3>Onsdag 19 juli</h3>
         <p>Preliminärt sista datum för synpunkter på detaljplanen</p>-->
+        <p>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</p>
     </section>
   
 </body>
