Add google index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="src/header.css">
     <link rel="stylesheet" href="src/footer.css">
     <title>Malma Ängar</title>
+    <meta name="google-site-verification" content="6bTthGuCf6z2ACxAUHQlWCHS9LazBx69WDfmboPsagg" />
 </head>
 <body>
     
