--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -67,26 +67,13 @@
 
   <div class="aktuellt-info">
     <h1>Aktuellt</h1>
-    <article>
-      <h2>Ingenting inplanerat just nu, återkom gärna vid en senare tidpunk!</h2>
-      <!--
-      <h2 style="margin-bottom: 0;">Föreningen Malma by och ängar bjuder in: Träffa våra naturkunniga experter</h2>
-      <span>Tisdag 13 juni kl. 18.00</span>
-      <img src="../src/images/aktuellt/aktuellt.png" style="border-radius: 10px; margin: 25px 0; width: 100%;">
-      <p>
-        Kom med oss ut på ängarna och till Bäcklösa Natura2000!
-        <b>Cajsa Björkén</b> och <b>Björn</b> Bråvander delar med sig av sina kunskaper och hjälper oss se allt det fina som finns i vårt stadsnära område Malma by och ängar.
-        En stilla kunskapspromenad i lättgången terräng. Vi ses vid skylten vid Slädvägen/Barkspadevägen (även vid regnigt väder).<br>
-        Välkommen!
-      </p>
-      <p>
-        <b>Cajsa Björkén</b><br>
-        Cajsa är ekolog och naturvårdare med stort intresse för såväl skog som kulturlandskap. Hon arbetar med naturvård på Upplandsstiftelsen men spenderar även en stor del av sin fritid i naturen i jakt på arter och naturupplevelser. Cajsa bor i anslutning till beteshagarna vid Malma och har ett stort engagemang för bevarandet av naturvärdena i området.
-      </p>
-      <p>
-        <b>Björn Bråvander</b><br>
-        Björn är en artjägare som är intresserad av det mesta i naturen. Kanske särskilt rödlistade- och signal-arter. Specialområdet är svampar. Björn driver eget företag, i vilket han inventerar svampförekomst i potentiellt skyddsvärd skog och håller svampkurser. Han vill inte presentera sig själv som någon insektsexpert, men som boende i Ulleråker börjar han bli väl bekant med förekomster av den starkt hotade cinnoberbaggen i vår närmiljö här i Uppsalas södra stadsdelar.
-      </p>-->
+    <article style="display: flex; flex-direction: column; gap: 10px;">
+      <span><b>• Styrelsesammanträde vecka 33</b></span>
+      <span><b>• Medborgardialog med Föreningen Vårda Uppsala m.fl. 28/8</b></span>
+      <span><b>• Skrivelser på gång till Länsstyrelsen, Uppsala universitet, Statens Lantbruksuniversitet, Uppsala kommun, Uppsala Akademiförvaltning och Naturvårdsverket.</b></span>
+      <span><b>• Förslaget till detaljplan över vårt område väntas den 31 augusti!</b></span>
+      <span><b>• Arbeta vidare på alla goda idéer från i våras samt på insikten om ständigt nya iakttagelser och fynd på våra ängar</b></span>
+      <span><b>• Eventuell ny Malma-dag! Och/eller en 4H-dag!</b></span>
     </article>
   </div>
 </body>
