--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -62,25 +62,29 @@
   
   <h1 style="width:50%; margin:auto; padding: 50px 0 50px 0; margin-bottom: 0;">Kalendarium</h1>
     <section style="border-radius: 10px; width:50%; margin:auto; border: 3px solid black; padding: 25px;">
-        <!-- <h3>Lördag 13 maj</h3>
-        <p>Malmadagen Aktivitet och trivsel ute på ängarna</p> 
-        <h3>Onsdag 31 maj</h3> 
+      <!-- 
+        <h3>13 maj</h3>
+        <span>Malmadagen med aktivitet och trivsel ute på ängarna</span> 
+        <h3>13 maj</h3>
+        <p>Dagens ros i UNT med ett stort tack till Charlotte och Ingvar Petterson</p> 
+        <h3>13 maj</h3>
+        <p>Föreningens hemsida öppnar officiellt: www.malmaängar.se</p> 
+        <h3>14 maj</h3>
+        <p>Debattartikel införes i UNT (av Hans Å, i föreningens namn)</p> 
+        <h3>31 maj</h3> 
         <p>Styrelsesammanträde</p>
-        <h3>Onsdag 7 juni</h3>
+        <h3>7 juni</h3>
         <p>Förväntat datum för kommunens detaljplan över området</p>
-        <h3>Tisdag 13 juni</h3>
-        <p>Exkursion med Cajsa Björkén</p>
-        <h3>Tisdag 13 juni</h3>
+        <h3>13 juni</h3>
+        <p> Exkursion med sakkunniga över betesmarkerna och Natura 2000</p>
+        <h3>13 juni</h3>
         <p>Styrelsesammanträde</p>
-        <h3>Onsdag 14 juni</h3>
-        <p>
-            Föreningsmöte på Valsätraskolan
-            Information och åtgärder med anledning av detaljplanen
-        </p>
-        <h3>Onsdag 19 juli</h3>
-        <p>Preliminärt sista datum för synpunkter på detaljplanen</p>-->
+        <h3>16 juni</h3>
+        <p>Stadsvandring med Föreningen Vårda Uppsala</p>
+        <h3>19 juli</h3>
+        <p>Preliminärt sista datum för synpunkter på detaljplanen</p> -->
         <p>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</p>
     </section>
-  
+ 
 </body>
 </html>
