--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -61,29 +61,29 @@
   </div>
   
   <h1 style="width:50%; margin:auto; padding: 50px 0 50px 0; margin-bottom: 0;">Kalendarium</h1>
-    <section style="border-radius: 10px; width:50%; margin:auto; border: 3px solid black; padding: 25px;">
-      <!-- 
-        <h3>13 maj</h3>
-        <span>Malmadagen med aktivitet och trivsel ute på ängarna</span> 
-        <h3>13 maj</h3>
-        <p>Dagens ros i UNT med ett stort tack till Charlotte och Ingvar Petterson</p> 
-        <h3>13 maj</h3>
-        <p>Föreningens hemsida öppnar officiellt: www.malmaängar.se</p> 
-        <h3>14 maj</h3>
-        <p>Debattartikel införes i UNT (av Hans Å, i föreningens namn)</p> 
-        <h3>31 maj</h3> 
-        <p>Styrelsesammanträde</p>
-        <h3>7 juni</h3>
-        <p>Förväntat datum för kommunens detaljplan över området</p>
-        <h3>13 juni</h3>
-        <p> Exkursion med sakkunniga över betesmarkerna och Natura 2000</p>
-        <h3>13 juni</h3>
-        <p>Styrelsesammanträde</p>
-        <h3>16 juni</h3>
-        <p>Stadsvandring med Föreningen Vårda Uppsala</p>
-        <h3>19 juli</h3>
-        <p>Preliminärt sista datum för synpunkter på detaljplanen</p> -->
-        <p>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</p>
+    <section style="border-radius: 10px; width:50%; margin:auto auto 10px auto; border: 3px solid black; padding: 25px;">
+      <h3>23 juni</h3>
+      <p>Namninsamlingen överlämnas till Länsstyrelsen/Stefan Attefall</p>
+      <h3>19 juni</h3>
+      <p>Namninsamlingen överlämnas till Länsstyrelsen/Stefan Attefall</p>
+      <h3>16 juni</h3>
+      <p>Namninsamlingen överlämnas till Uppsala kommun/Erik Pelling</p>
+      <h3>13 juni</h3>
+      <p>Styrelsesammanträde</p>
+      <h3>13 juni</h3>
+      <p> Exkursion med sakkunniga över betesmarkerna och Natura 2000</p>
+      <h3>31 maj</h3> 
+      <p>Styrelsesammanträde</p>
+      <h3>16 maj</h3>
+      <p>Stadsvandring med Föreningen Vårda Uppsala</p>
+      <h3>14 maj</h3>
+      <p>Debattartikel införes i UNT (av Hans Å, i föreningens namn)</p> 
+      <h3>13 maj</h3>
+      <p>Föreningens hemsida öppnar officiellt: www.malmaängar.se</p> 
+      <h3>13 maj</h3>
+      <p>Dagens ros i UNT med ett stort tack till Charlotte och Ingvar Petterson</p> 
+      <h3>13 maj</h3>
+      <span>Malmadagen med aktivitet och trivsel ute på ängarna</span> 
     </section>
  
 </body>
