Ändrat text 23 juni

--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -63,7 +63,7 @@
   <h1 style="width:50%; margin:auto; padding: 50px 0 50px 0; margin-bottom: 0;">Kalendarium</h1>
     <section style="border-radius: 10px; width:50%; margin:auto auto 10px auto; border: 3px solid black; padding: 25px;">
       <h3>23 juni</h3>
-      <p>Namninsamlingen överlämnas till Länsstyrelsen/Stefan Attefall</p>
+      <p>Gemensamt midsommarfirande på ängarna!</p>
       <h3>19 juni</h3>
       <p>Namninsamlingen överlämnas till Länsstyrelsen/Stefan Attefall</p>
       <h3>16 juni</h3>
