--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           </div>
         </div>
         <div>
+            <a href="pages/bilagor.html">Bilagor</a>
+        </div>
+        <div>
             <a href="pages/aktuellt.html">Aktuellt</a>
             <div class="dropdown-menu">
                 <a href="pages/aktuellt.html">Aktuellt</a>
@@ -56,6 +59,7 @@
         <a href="pages/mål.html"><li>Mål</li></a>
         <a href="pages/styrelse.html"><li>Styrelse</li></a>
         <a href="pages/stadgar.html"><li>Stadgar</li></a>
+        <a href="pages/bilagor.html">Bilagor</a>
         <a href="pages/kontakt.html"><li>Kontakt</li></a>
         <a href="pages/aktuellt.html"><li>Aktuellt</li></a>
         <a href="pages/kalendarium.html"><li>Kalendarium</li></a>
