--- a/pages/bilagor.html
+++ b/pages/bilagor.html
@@ -10,14 +10,14 @@
     <title>Malma Ängar</title>
 </head>
 <body>
-    
+
     <!-- Header -->
 
     <header>
       <h1><a href="../index.html">Föreningen Malma by och ängar</a></h1>
       <nav>
         <div>
-          <a href="om-föreningen.html" class="active">Om Föreningen</a>
+          <a href="om-föreningen.html">Om Föreningen</a>
           <div class="dropdown-menu">
             <a href="om-föreningen.html">Om Föreningen</a>
             <a href="mål.html">Mål</a>
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div>
-          <a href="bilagor.html">Bilagor</a>
+          <a href="bilagor.html" class="active">Bilagor</a>
         </div>
         <div>
           <a href="aktuellt.html">Aktuellt</a>
@@ -36,11 +36,7 @@
           </div>
         </div>
         <div>
-          <a href="aktuellt.html">Aktuellt</a>
-          <div class="dropdown-menu">
-              <a href="aktuellt.html">Aktuellt</a>
-              <a href="kalendarium.html">Kalendarium</a>
-          </div>
+          <a href="kontakt.html">Kontakt</a>
         </div>
         <div class="call-to-action">
           <a href="bli-medlem.html" id="call-to-action">Bli Medlem</a>
@@ -58,10 +54,10 @@
       <ul id="menu">
         <a href="../index.html"><li>Hem</li></a>
         <a href="om-föreningen.html"><li>Om Föreningen</li></a>
-        <a href="mål.html"><li class="active">Mål</li></a>
+        <a href="mål.html"><li>Mål</li></a>
         <a href="styrelse.html"><li>Styrelse</li></a>
         <a href="stadgar.html"><li>Stadgar</li></a>
-        <a href="bilagor.html"><li>Bilagor</li></a>
+        <a href="bilagor.html"><li class="active">Bilagor</li></a>
         <a href="kontakt.html"><li>Kontakt</li></a>
         <a href="aktuellt.html"><li>Aktuellt</li></a>
         <a href="kalendarium.html"><li>Kalendarium</li></a>
@@ -71,26 +67,7 @@
 
     <!-- Body -->
     <div class="flex-layout-row">
-        <h1>
-            Mål
-        </h1>
-        <p>
-            Föreningens ändamål är att bevara de kvarvarande värdena i Malma by med omgivande natur- och kulturlandskap. För detta ändamål vill föreningen:<br><br>
-
-            • Ta till vara medlemmarnas kunskap om och intresse för området<br><br>
-
-            • Samla och sprida kunskap om områdets historia och värden samt om idéer, planer och beslut om områdets förvaltning<br><br>
-
-            • Motverka markexploatering inom området<br><br>
-
-            • Verka för god kommunikation mellan föreningen, berörda markägare, Uppsala kommun samt övriga berörda myndigheter och intressenter<br><br>
-
-            • Lämna skriftliga synpunkter under samråd och vid andra lämpliga tillfällen,<br><br>
-
-            • Ordna eller stödja aktiviteter med områdets värden som utgångspunkt.<br><br>
-
-        </p>
+        <h1>Bilagor</h1>
     </div>
-    <img id="image-right" src="../src/images/Bi.jpg" />
+
 </body>
-</html>
