--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -25,6 +25,9 @@
         </div>
       </div>
       <div>
+        <a href="bilagor.html">Bilagor</a>
+      </div>
+      <div>
         <a href="aktuellt.html" class="active">Aktuellt</a>
         <div class="dropdown-menu">
             <a href="aktuellt.html">Aktuellt</a>
@@ -53,6 +56,7 @@
       <a href="mål.html"><li>Mål</li></a>
       <a href="styrelse.html"><li>Styrelse</li></a>
       <a href="stadgar.html"><li>Stadgar</li></a>
+      <a href="bilagor.html"><li>Bilagor</li></a>
       <a href="kontakt.html"><li>Kontakt</li></a>
       <a href="aktuellt.html"><li>Aktuellt</li></a>
       <a href="kalendarium.html" ><li class="active">Kalendarium</li></a>
