--- a/pages/om-föreningen.html
+++ b/pages/om-föreningen.html
@@ -26,6 +26,9 @@
           </div>
         </div>
         <div>
+          <a href="bilagor.html">Bilagor</a>
+        </div>
+        <div>
           <a href="aktuellt.html">Aktuellt</a>
           <div class="dropdown-menu">
               <a href="aktuellt.html">Aktuellt</a>
@@ -54,6 +57,7 @@
         <a href="mål.html"><li>Mål</li></a>
         <a href="styrelse.html"><li>Styrelse</li></a>
         <a href="stadgar.html"><li>Stadgar</li></a>
+        <a href="bilagor.html"><li>Bilagor</li></a>
         <a href="kontakt.html"><li>Kontakt</li></a>
         <a href="aktuellt.html"><li>Aktuellt</li></a>
         <a href="kalendarium.html"><li>Kalendarium</li></a>
