Update information and add downloads

--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -10,6 +10,7 @@
   <title>Malma Ängar</title>
 </head>
 <body>
+
   <!-- Header -->
 
   <header>
@@ -69,15 +70,17 @@
       <h1>Aktuellt</h1>
   </div>
 
+ 
   <div class="aktuellt-info">
-    <h1>Aktuellt</h1>
+    <h1>Aktuellt</h1> 
     <article style="display: flex; flex-direction: column; gap: 10px;">
-      <span><b>• Styrelsesammanträde vecka 33</b></span>
+      <span><b>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</b></span>
+      <!--<span><b>• Styrelsesammanträde vecka 33</b></span>
       <span><b>• Medborgardialog med Föreningen Vårda Uppsala m.fl. 28/8</b></span>
       <span><b>• Skrivelser på gång till Länsstyrelsen, Uppsala universitet, Statens Lantbruksuniversitet, Uppsala kommun, Uppsala Akademiförvaltning och Naturvårdsverket.</b></span>
       <span><b>• Förslaget till detaljplan över vårt område väntas den 31 augusti!</b></span>
       <span><b>• Arbeta vidare på alla goda idéer från i våras samt på insikten om ständigt nya iakttagelser och fynd på våra ängar</b></span>
-      <span><b>• Eventuell ny Malma-dag! Och/eller en 4H-dag!</b></span>
+      <span><b>• Eventuell ny Malma-dag! Och/eller en 4H-dag!</b></span> -->
     </article>
   </div>
 </body>
