--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -66,7 +66,8 @@
   
   <h1 style="width:50%; margin:auto; padding: 50px 0 50px 0; margin-bottom: 0;">Kalendarium</h1>
     <section style="border-radius: 10px; width:50%; margin:auto auto 10px auto; border: 3px solid black; padding: 25px;">
-      <h3>23 juni</h3>
+      <p>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</p>
+      <!-- <h3>23 juni</h3>
       <p>Gemensamt midsommarfirande på ängarna!</p>
       <h3>19 juni</h3>
       <p>Namninsamlingen överlämnas till Länsstyrelsen/Stefan Attefall</p>
@@ -87,7 +88,7 @@
       <h3>13 maj</h3>
       <p>Dagens ros i UNT med ett stort tack till Charlotte och Ingvar Petterson</p> 
       <h3>13 maj</h3>
-      <span>Malmadagen med aktivitet och trivsel ute på ängarna</span> 
+      <span>Malmadagen med aktivitet och trivsel ute på ängarna</span> -->
     </section>
  
 </body>
