--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="pages/mål.html"><li>Mål</li></a>
         <a href="pages/styrelse.html"><li>Styrelse</li></a>
         <a href="pages/stadgar.html"><li>Stadgar</li></a>
-        <a href="pages/bilagor.html">Bilagor</a>
+        <a href="pages/bilagor.html"><li>Bilagor</li></a>
         <a href="pages/kontakt.html"><li>Kontakt</li></a>
         <a href="pages/aktuellt.html"><li>Aktuellt</li></a>
         <a href="pages/kalendarium.html"><li>Kalendarium</li></a>
