Updatera aktuellt info

--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -74,13 +74,11 @@
   <div class="aktuellt-info">
     <h1>Aktuellt</h1> 
     <article style="display: flex; flex-direction: column; gap: 10px;">
-      <span><b>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</b></span>
-      <!--<span><b>• Styrelsesammanträde vecka 33</b></span>
-      <span><b>• Medborgardialog med Föreningen Vårda Uppsala m.fl. 28/8</b></span>
-      <span><b>• Skrivelser på gång till Länsstyrelsen, Uppsala universitet, Statens Lantbruksuniversitet, Uppsala kommun, Uppsala Akademiförvaltning och Naturvårdsverket.</b></span>
-      <span><b>• Förslaget till detaljplan över vårt område väntas den 31 augusti!</b></span>
-      <span><b>• Arbeta vidare på alla goda idéer från i våras samt på insikten om ständigt nya iakttagelser och fynd på våra ängar</b></span>
-      <span><b>• Eventuell ny Malma-dag! Och/eller en 4H-dag!</b></span> -->
+      <span><b>• 2 oktober – Styrelsesammanträde</b></span>
+      <span><b>• 7 oktober – Malma-dagen kl 10-13! Samling vid ängsskylten vid Slädvägens busshållplats</b></span>
+      <span><b>• 11 oktober – Föreningen Vårda Uppsala/Dialogforum info-träff</b></span>
+      <span><b>• Vecka 41 eller 42 – Styrelsesammanträde</b></span>
+      <span><b>• 27 oktober – Sista dag inom samrådet för att skriftliga yttranden om förslaget till detaljplan ska lämnas in</b></span>
     </article>
   </div>
 </body>
