--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -65,9 +65,35 @@
   </div>
   
   <h1 style="width:50%; margin:auto; padding: 50px 0 50px 0; margin-bottom: 0;">Kalendarium</h1>
-    <section style="border-radius: 10px; width:50%; margin:auto auto 10px auto; border: 3px solid black; padding: 25px;">
-      <p>För nuvarande ingenting inplanerat. Återkom gärna vid en senare tidpunkt!</p>
-      <!-- <h3>23 juni</h3>
+    <section style="border-radius: 10px; width:50%; margin:auto auto 10px auto; border: 3px solid black; padding: 25px;">      
+      <h3>Hela våren och sommaren</h3>
+      <p>Styrelsen och medlemmar har lämnat in
+        skrivelser och yttranden till Uppsala kommun, Länsstyrelsen, Uppsala
+        Akademiförvaltningen och UNT (Det mesta återfinns under länken
+        Bilagor)</p>
+      <h3>2 oktober</h3>
+      <p>Styrelsesammanträde</p>
+      <h3>25 september</h3>
+      <p>Kommunens informationsträff i Valsätraskolan angående
+        förslaget till detaljplan</p>
+      <h3>23 september</h3>
+      <p>Föreningen deltar tillsammans med andra föreningar i
+        manifestation på Stora Torget</p>
+      <h3>15 september</h3>
+      <p>Uppsala kommun öppnar officielllt för samråd kring
+        förslag till detaljplan för området Valsätra 1:9 och del av Valsätra 1:4.
+        (Fast vi har fått tillgång till planen ett par veckor tidigare, inför Plan- och
+        byggnadsnämndens sammanträde den 31 augusti.) Samrådet pågår till och
+        med den 27 oktober.</p>
+      <h3>14 september</h3>
+      <p>Föreningen är inbjuden till information och samtal med Uppsala Akademiförvaltningen (tre styrelseledamöter deltar)</p>
+      <h3>9 september</h3>
+      <p>Kulturnatten. Föreningen presenterar sig på stan</p>
+      <h3>6 september</h3>
+      <p>Styrelsesammanträdande</p>
+      <h3>16 augusti</h3>
+      <p>Styrelsesammanträdande</p>
+      <h3>23 juni</h3>
       <p>Gemensamt midsommarfirande på ängarna!</p>
       <h3>19 juni</h3>
       <p>Namninsamlingen överlämnas till Länsstyrelsen/Stefan Attefall</p>
@@ -88,7 +114,7 @@
       <h3>13 maj</h3>
       <p>Dagens ros i UNT med ett stort tack till Charlotte och Ingvar Petterson</p> 
       <h3>13 maj</h3>
-      <span>Malmadagen med aktivitet och trivsel ute på ängarna</span> -->
+      <span>Malmadagen med aktivitet och trivsel ute på ängarna</span>
     </section>
  
 </body>
